--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: My Resume
-url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+url: 'http://devcron.com'
+baseurl: '/cv' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
@@ -13,19 +13,19 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
+name: Nishant Mohapatra
 tagline: Full Stack Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
+email: mohapatra.nishant@gmail.com
 phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+website: devcron.com #do not add http://
+linkedin: nishantmohapatra
+github: devcron
+twitter: '@nishantm0'
 
 
 # Tracker
-analytics: UA-83979019-1
+analytics: 
 #Update all the sections by editing the files inside _includes folder.
